# is-makinesi-erp

./: MANIFEST.in  README.md  license.txt  requirements.txt  setup.cfg  setup.py
is_makinesi_erp/: api.py  hooks.py  install.py  modules.txt  tasks.py
is_makinesi_erp/is_makinesi_erp/: custom_fields.py
is_makinesi_erp/is_makinesi_erp/doctype/bakim_kaydi/: bakim_kaydi.json  bakim_kaydi.py
is_makinesi_erp/is_makinesi_erp/doctype/curuf_isleme/: curuf_isleme.json  curuf_isleme.py
is_makinesi_erp/is_makinesi_erp/doctype/hakedis_odeme/: hakedis_odeme.json  hakedis_odeme.py
is_makinesi_erp/is_makinesi_erp/doctype/kantar_fisi/: kantar_fisi.json  kantar_fisi.py
is_makinesi_erp/is_makinesi_erp/doctype/kullanilan_parca/: kullanilan_parca.json  kullanilan_parca.py
is_makinesi_erp/is_makinesi_erp/doctype/makine/: makine.js  makine.json  makine.py  makine_dashboard.py
is_makinesi_erp/is_makinesi_erp/doctype/makine_hakedis/: makine_hakedis.json  makine_hakedis.py
is_makinesi_erp/is_makinesi_erp/doctype/makine_proje_gecmisi/: makine_proje_gecmisi.json  makine_proje_gecmisi.py
is_makinesi_erp/is_makinesi_erp/doctype/makine_puantaj/: makine_puantaj.json  makine_puantaj.py
is_makinesi_erp/is_makinesi_erp/doctype/masraf_kalemi/: masraf_kalemi.json  masraf_kalemi.py
is_makinesi_erp/is_makinesi_erp/doctype/personel_hakedis/: personel_hakedis.json  personel_hakedis.py
is_makinesi_erp/overrides/: customer_dashboard.py  employee_dashboard.py  project_dashboard.py
is_makinesi_erp/setup/: setup_items.py
is_makinesi_erp/tests/: test_makine_unit.py  test_properties.py
(+27 files in other folders)
