[metadata]
name = is_makinesi_erp
version = 0.0.1
description = İş Makinesi Firması için ERPNext Üzerine Kapsamlı ERP Çözümü
long_description = file: README.md
long_description_content_type = text/markdown
author = İş Makinesi ERP
author_email = info@ismakinesi.com
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.11

[options.packages.find]
exclude =
    tests
    tests.*
